# eli

./: .gitignore  README.md  launch.sh  pyproject.toml
src/eli/: __init__.py  config.py  context.py  data.py  encoder.py  eval.ipynb  eval_user.ipynb  noodle.py  noodling.py  test.py  test_copy.py  train.py  utils.py
src/eli/analyze/: eval.ipynb  eval_user.ipynb  t.py  t_copy.py
src/eli/datasets/: __main__.py  collect.py  config.py  logging_utils.py  target.py  tokens.py  upload.py
src/eli/sys/: del_vast.py  vast.py
src/eli/train/: __main__.py  config.py  download.py  encoder.py  test.py  train.py  utils.py
tests/: test_data.py
